<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb3_utils</name>
  <version>0.0.1</version>
  <description>A set of ROS utilities for the Qualcomm RB3</description>
  <maintainer email="s4patil@ucsd.edu">Om Patil</maintainer>
  <license>MIT</license>

  <exec_depend>gscam</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>camera_calibration</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
